Paginate role API
