# src/http/handler/rbac.rs
@@ -14,8 +14,7 @@ use crate::user::UserService;
 
 #[derive(Debug, Serialize, PartialEq)]
 pub struct RoleResponse {
-    pub username: String,
-    pub roles: Vec<String>,
+    pub role: String,
 }
 
 pub async fn get_user_roles(
@@ -24,7 +23,8 @@ pub async fn get_user_roles(
     scope: Scope,
     current_user: CurrentUser,
     path: Path<UsernamePathParam>,
-) -> ApiResult<Json<RoleResponse>> {
+    list: Query<PaginationQuery>,
+) -> ApiResult<Json<Page<String>>> {
     Scope::from(vec!["users:read", "roles"]).matches_exactly(&scope)?;
     let username = &path.username;
     let enforcer = enforcer.read().await;
@@ -35,11 +35,17 @@ pub async fn get_user_roles(
         return Err(ApiError::NotFound(format!("User {} not found", username)));
     }
 
-    let roles = enforcer.get_principal_roles(&sub).await?;
-    Ok(Json(RoleResponse {
-        username: username.clone(),
-        roles,
-    }))
+    let limit = list.limit();
+    let cursor = list.cursor();
+
+    let cursor = if let Some(cursor) = cursor {
+        Some(Cursor::from_b64(cursor)?)
+    } else {
+        None
+    };
+
+    let page = enforcer.list_principal_roles(&sub, limit, cursor.as_ref()).await?;
+    Ok(Json(page))
 }
 
 #[derive(Debug, Deserialize)]
@@ -65,11 +71,10 @@ pub async fn add_user_role(
         return Err(ApiError::NotFound(format!("User {} not found", username)));
     }
 
-    enforcer.add_role_to_principal(sub.clone(), &path.role).await?;
-    let roles = enforcer.get_principal_roles(&sub).await?;
+    let role = &path.role;
+    enforcer.add_role_to_principal(sub.clone(), role).await?;
     Ok(Json(RoleResponse {
-        username: username.clone(),
-        roles,
+        role: role.clone(),
     }))
 }
 
@@ -90,11 +95,10 @@ pub async fn remove_user_role(
         return Err(ApiError::NotFound(format!("User {} not found", username)));
     }
 
-    enforcer.remove_role_from_principal(sub, &path.role).await?;
-    let roles = enforcer.get_principal_roles(sub).await?;
+    let role = &path.role;
+    enforcer.remove_role_from_principal(sub, role).await?;
     Ok(Json(RoleResponse {
-        username: username.clone(),
-        roles,
+        role: role.clone(),
     }))
 }
 
@@ -138,8 +142,8 @@ pub async fn get_user_permissions(
         None
     };
 
-    let rules = enforcer.list_principal_permissions(&sub, limit, cursor.as_ref()).await?;
-    let permissions = rules.map(|rule| Permission::from(rule));
+    let page = enforcer.list_principal_permissions(&sub, limit, cursor.as_ref()).await?;
+    let permissions = page.map(|rule| Permission::from(rule));
     Ok(Json(permissions))
 }
 
